# BruteForm

./: ARCHITECTURE.md  Cargo.toml  LOGGING.md  README.md
src/: constants.rs  lib.rs  logging.rs  main.rs  zenkesi.py
src/app/: board_evaluation.rs  bruteforce_search.rs  chain_extension.rs  chain_operations.rs  chain_play.rs  event_adapter.rs  mod.rs  state.rs  stats.rs  ui.rs  ui_helpers.rs
src/app/chain_play/: animation.rs  core.rs  mod.rs  piece_placer.rs  state_manager.rs  target_operations.rs
src/app/ui/: bruteforce.rs  chainplay.rs  helpers.rs  mod.rs
src/application/: mod.rs  progress.rs
src/application/bruteforce/: event.rs  mod.rs  service.rs
src/application/bruteforce/search/: aggregator.rs  (+5 more)
src/application/chainplay/: mod.rs  service.rs
src/chain/: beam.rs  detector.rs  generator.rs  grid.rs  mod.rs
src/domain/: mod.rs
src/domain/board/: bitboard.rs  board.rs  board_bits.rs  cell.rs  hash.rs  mod.rs
src/domain/chain/: mod.rs  result.rs
src/domain/chain_legacy/: detector.rs  generator.rs  grid.rs  mod.rs
src/domain/constraints/: coloring.rs  mod.rs
src/domain/search/: config.rs  mod.rs  result.rs
src/infrastructure/: mod.rs
src/infrastructure/cache/: lru.rs  mod.rs
src/infrastructure/executor/: mod.rs  parallel.rs
src/infrastructure/storage/: mod.rs  writer.rs
src/model/: cell.rs  mod.rs
src/presentation/: mod.rs
src/presentation/state/: bruteforce.rs  chainplay.rs  mod.rs
src/profiling/: mod.rs
src/search/: board.rs  coloring.rs  dfs.rs  engine.rs  hash.rs  lru.rs  mod.rs  pruning.rs
tests/: integration_tests.rs
